fix spacing for mw

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -41,7 +41,7 @@ body {
 
 	@media screen and (max-width: $mobile) {
 		display: block;
-		margin: 5rem 5rem;
+		margin: 5rem 1.5rem;
 	}
 
 	@media (prefers-color-scheme: dark) {
